samples/_failures_safe/1761706557_d8bc74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17f454fb.c: In function ‘bfs’:
./samples/SAFE/__tmp_17f454fb.c:178:21: error: expected ‘)’ at end of input
  178 |         free(visited
      |             ~       ^
      |                     )
./samples/SAFE/__tmp_17f454fb.c:178:9: error: expected declaration or statement at end of input
  178 |         free(visited
      |         ^~~~
./samples/SAFE/__tmp_17f454fb.c:178:9: error: expected declaration or statement at end of input
